.infrastructure/todoapp/templates/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: todoapp

---

apiVersion: v1
kind: Namespace
metadata:
  name: mateapp
