.infrastructure/todoapp/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp
  namespace: todoapp
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
        namespace: todoapp
        job: todoapp

    spec:
      serviceAccountName: secrets-reader
      containers:
        - name: todoapp
          image: fredfredburger/todoapp:5.0.3
          volumeMounts:
            - name: data
              mountPath: /app/data
            - name: app-secrets-volume
              mountPath: "/app/secrets"
              readOnly: true
            - name: app-config-volume
              mountPath: "/app/configs"
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "150m"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: api/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: api/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-data
        - name: app-secrets-volume
          secret:
            secretName: app-secret
        - name: app-config-volume
          configMap:
            name: app-config
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: app
                operator: In
                values:
                - todoapp
