.infrastructure/todoapp/templates/clusterIp.yml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-service
  namespace: todoapp
spec:
  type: ClusterIP
  selector:
    app: todoapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
